--- a/src/styles/Submit.css
+++ b/src/styles/Submit.css
@@ -1,8 +1,12 @@
+.submit-page {
+  height: 76vh;
+}
+
 .form-container {
   background-color: white;
   color: black;
   width: 80vw;
-  height: 80vh;
+  height: 100%;
   display: flex;
   justify-content: space-between;
   align-items: center;
@@ -22,6 +26,29 @@
 
   /* background-color: black; */
   /* color: white; */
-  border-radius: 3rem;
-  padding: 0.5rem 1rem;
+  border-radius: 1rem;
+  padding: 2rem 1rem;
+  overflow: scroll;
+}
+
+.right-form-container {
+  width: 100%;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  text-align: left;
+  padding: 2rem 1rem;
+  justify-content: center;
+  align-items: center;
+  flex-grow: 1;
+  margin: 0;
+}
+
+.right-form-container textarea {
+  width: 100%;
+  height: 100%;
+  font-size: 0.8rem;
+  border: none;
+  border-radius: 0.5rem;
+  background-color: #f2f2f2;
 }
