--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -30,7 +30,7 @@ body {
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: flex-start;
+  justify-content: center;
   /* place-items: center; */
   min-width: 320px;
   min-height: 100vh;
