--- a/src/styles/Submit.css
+++ b/src/styles/Submit.css
@@ -2,17 +2,25 @@
   height: 76vh;
 }
 
-.form-container {
+.submit-container {
   background-color: white;
   color: black;
-  width: 80vw;
-  height: 100%;
+  width: auto;
+  height: 110%;
   display: flex;
+  flex-direction: column;
   justify-content: space-between;
   align-items: center;
 
   border-radius: 3rem;
   padding: 2rem 2rem;
+}
+
+.form-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  overflow: scroll;
 }
 
 .left-form-container {
@@ -21,7 +29,7 @@
   justify-content: center;
   gap: 1rem;
   align-items: center;
-  width: 40%;
+  width: 50%;
   height: 100%;
 
   /* background-color: black; */
@@ -42,6 +50,7 @@
   align-items: center;
   flex-grow: 1;
   margin: 0;
+  overflow: scroll;
 }
 
 .right-form-container textarea {
@@ -51,4 +60,60 @@
   border: none;
   border-radius: 0.5rem;
   background-color: #f2f2f2;
+}
+
+.button-container {
+  width: 100%;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 0 1rem;
+}
+
+.submit {
+  background-color: #c2fbd7;
+  border-radius: 100px;
+  box-shadow: rgba(44, 187, 99, .2) 0 -25px 18px -14px inset, rgba(44, 187, 99, .15) 0 1px 2px, rgba(44, 187, 99, .15) 0 2px 4px, rgba(44, 187, 99, .15) 0 4px 8px, rgba(44, 187, 99, .15) 0 8px 16px, rgba(44, 187, 99, .15) 0 16px 32px;
+  color: green;
+  cursor: pointer;
+  display: inline-block;
+  padding: 7px 20px;
+  text-align: center;
+  text-decoration: none;
+  transition: all 250ms;
+  border: 0;
+  font-size: 1rem;
+  user-select: none;
+  -webkit-user-select: none;
+  touch-action: manipulation;
+}
+
+.submit:hover {
+  box-shadow: rgba(44, 187, 99, .35) 0 -25px 18px -14px inset, rgba(44, 187, 99, .25) 0 1px 2px, rgba(44, 187, 99, .25) 0 2px 4px, rgba(44, 187, 99, .25) 0 4px 8px, rgba(44, 187, 99, .25) 0 8px 16px, rgba(44, 187, 99, .25) 0 16px 32px;
+  transform: scale(1.05) rotate(-1deg);
+}
+
+.reset {
+  /* background-color: #e62143; */
+  background-color: #fff;
+  border-radius: 100px;
+  /* box-shadow: rgba(187, 44, 99, .2) 0 -25px 18px -14px inset, rgba(187, 44, 99, .15) 0 1px 2px, rgba(187, 44, 99, .15) 0 2px 4px, rgba(187, 44, 99, .15) 0 4px 8px, rgba(187, 44, 99, .15) 0 8px 16px, rgba(187, 44, 99, .15) 0 16px 32px; */
+  color: #e6214371;
+  cursor: pointer;
+  display: inline-block;
+  padding: 7px 20px;
+  text-align: center;
+  text-decoration: underline;
+  transition: all 250ms;
+  border: 0;
+  font-size: 1.2rem;
+  user-select: none;
+  -webkit-user-select: none;
+  touch-action: manipulation;
+}
+
+.reset:hover {
+  /* box-shadow: rgba(187, 44, 99, .35) 0 -25px 18px -14px inset, rgba(187, 44, 99, .25) 0 1px 2px, rgba(187, 44, 99, .25) 0 2px 4px, rgba(187, 44, 99, .25) 0 4px 8px, rgba(187, 44, 99, .25) 0 8px 16px, rgba(187, 44, 99, .25) 0 16px 32px; */
+  color: #e62143;
+  transform: rotate(-1deg);
 }
