--- a/src/styles/Submit.css
+++ b/src/styles/Submit.css
@@ -117,3 +117,37 @@
   color: #e62143;
   transform: rotate(-1deg);
 }
+
+.link-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 1rem
+}
+
+/* CSS */
+.link-button {
+  background-color: #1e293b;
+  color: #fff;
+  border: 0 solid #e2e8f0;
+  border-radius: 1.5rem;
+  box-sizing: border-box;
+  cursor: pointer;
+  display: inline-block;
+  line-height: 1;
+  padding: 0.7rem 1rem;
+  text-align: center;
+  text-decoration: none #0d172a solid;
+  text-decoration-thickness: auto;
+  transition: all .2s cubic-bezier(.4, 0, .2, 1);
+  box-shadow: 0px 1px 2px rgba(166, 175, 195, 0.25);
+  user-select: none;
+  -webkit-user-select: none;
+  touch-action: manipulation;
+}
+
+.link-button:hover {
+  background-color: #fff;
+  color: #0d172a;
+  box-shadow: 2px 4px 4px rgba(166, 175, 195, 0.5);
+}
