--- a/src/styles/Submit.css
+++ b/src/styles/Submit.css
@@ -68,6 +68,7 @@
   justify-content: space-between;
   align-items: center;
   padding: 0 1rem;
+  margin: 0;
 }
 
 .submit {
@@ -122,7 +123,7 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  gap: 1rem
+  gap: 1rem;
 }
 
 /* CSS */
