--- a/src/styles/Solve.css
+++ b/src/styles/Solve.css
@@ -6,7 +6,7 @@
   gap: 1rem;
 
   width: 90vh;
-  height: 80vh;
+  /* height: 80vh; */
   margin: 0 1rem;
   padding: 1rem;
 
@@ -21,7 +21,7 @@
   justify-content: space-between;
   gap: 2rem;
   width: 100%;
-  padding: 2rem 2rem;
+  padding: 0rem 2rem;
 
   height: 300px;
 }
@@ -65,4 +65,10 @@
   display: flex;
   justify-content: center;
   align-items: center;
+}
+
+.reconstruction-input,
+.splits-input {
+  resize: none;
+  border-radius: 0.5rem;
 }
