--- a/src/styles/Submit.css
+++ b/src/styles/Submit.css
@@ -60,6 +60,7 @@
   border: none;
   border-radius: 0.5rem;
   background-color: #f2f2f2;
+  resize: none;
 }
 
 .button-container {
@@ -124,6 +125,11 @@
   justify-content: center;
   align-items: center;
   gap: 1rem;
+  overflow: scroll;
+  flex-wrap: wrap;
+
+  max-width: 100%;
+  height: fit-content;
 }
 
 /* CSS */
